--- a/views/atividades.html
+++ b/views/atividades.html
@@ -76,21 +76,23 @@
             </div>
         </aside>
 
+        <!--SECTION MIDDLE-->
         <section id="middle">
+            <!--TASK TABLE HEADER-->
             <div class="task-table-container">
                 <div class="task-table-header">
-                    <div class="create-task-button">
+                    <div class="create-task-button"> <!--ADICIONAR MODAL POR JAVASCRIPT-->
                         <span class="material-icons-sharp">task</span>
                         <h4>Criar Atividade</h4>
                     </div>
-                    <div class="task-options-area">
-                        <div class="task-filter">
+                    <div class="task-options-area"> 
+                        <div class="task-filter"> <!--ADICIONAR MODAL POR JAVASCRIPT-->
                             <span class="material-icons-sharp">tune</span>
                             <h4>Filtro</h4>
                         </div>
                         <div class="task-results-area">
                             <h4>Resultados por página:</h4>
-                            <div class="task-results">
+                            <div class="task-results"> <!--ADICIONAR MODAL POR JAVASCRIPT-->
                                 <h5>10</h5>
                                 <span class="material-icons-sharp">expand_more</span>
                             </div>
@@ -98,6 +100,7 @@
                     </div>
                 </div>
 
+                <!--TASK TABLE-->
                 <table>
                     <thead>
                         <tr class="task-title">
@@ -382,8 +385,9 @@
                     </tbody>
                 </table>
             </div>
+            <!--FOOTER-->
             <footer>
-                <a href="https://github.com/GeovaniSS">
+                <a href="https://github.com/GeovaniSS" target="_blank">
                     <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                 </a>
             </footer>
