--- a/views/calendário.html
+++ b/views/calendário.html
@@ -76,8 +76,10 @@
             </div>
         </aside>
 
+        <!--SECTION CALENDAR-->
         <section id="s-calendar">
             <h1>Calendário</h1>
+            <!--CALENDAR-->
             <div class="calendar">
                 <div class="month">
                     <div class="navigate-month">
@@ -92,8 +94,14 @@
                     </div>
                 </div>
                 <div class="week"></div>
-                <div class="days"></div>
+                <div class="days">
+                </div>
             </div>
+            <footer>
+                <a href="https://github.com/GeovaniSS" target="_blank">
+                    <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
+                </a>
+            </footer>
         </section>
     </main>
     <script src="../scripts/menu.js"></script>
