--- a/views/cpi.html
+++ b/views/cpi.html
@@ -9,7 +9,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="../styles/nav-style.css">
     <link rel="stylesheet" href="../styles/menu-style.css">
-    <link rel="stylesheet" href="../styles/rdc-style.css">
+    <link rel="stylesheet" href="../styles/subjects-style.css">
+    <style>
+        main aside {
+            height: 138vh;
+        }
+
+        footer {
+            margin-top: 2.9rem;
+        }
+    </style>
 </head>
 <body>
     <!--NAVIGATION-->
@@ -140,13 +149,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 11 - Criação de uma rede pequena</h5>
+                                    <h5>Layouts com CSS</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>17/01/22</h5>
+                                    <h5>27/01/22</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -158,13 +167,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 10 - Camada de Aplicação</h5>
+                                    <h5>Formatação de Formulários</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>10/01/22</h5>
+                                    <h5>13/01/22</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -176,16 +185,16 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 9 - Camada de Transporte</h5>
+                                    <h5>Flexbox</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>08/01/22</h5>
+                                    <h5>06/01/22</h5>
                                 </td>
                                 <td class="class-attendance">
-                                    <span class="material-icons-sharp noattendance">cancel</span>
+                                    <span class="material-icons-sharp complete">check_circle</span>
                                     <h5 class="icon-center">Falta</h5>
                                 </td>
                             </tr>
@@ -194,34 +203,16 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Menu, Listas e Cards</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>20/12/21</h5>
+                                    <h5>26/12/21</h5>
                                 </td>
                                 <td class="class-attendance">
-                                    <span class="material-icons-sharp noattendance">cancel</span>
-                                    <h5 class="icon-center">Falta</h5>
-                                </td>
-                            </tr>
-                        </tbody>
-    
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 7 - Endereçamento IP</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>06/12/21</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp noattendance">cancel</span>
+                                    <span class="material-icons-sharp complete">check_circle</span>
                                     <h5 class="icon-center">Falta</h5>
                                 </td>
                             </tr>
@@ -230,13 +221,31 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 6 - Camada de Rede</h5>
+                                    <h5>Tags Semânticas e Seletores</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>29/11/22</h5>
+                                    <h5>16/12/21</h5>
+                                </td>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5 class="icon-center">Falta</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+    
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Fonte e Box-model</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>12/12/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -248,13 +257,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 5 - Protocolo Ethernet</h5>
+                                    <h5>Introdução ao CSS</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>13/11/21</h5>
+                                    <h5>02/12/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -266,13 +275,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 4 - Camada de Acesso à Rede</h5>
+                                    <h5>Elementos e Propriedades de Formulário</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>25/10/21</h5>
+                                    <h5>18/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -284,13 +293,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 3 - Comunicação e Protocolos de Rede</h5>
+                                    <h5>Multimídia e Navegação</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>11/10/21</h5>
+                                    <h5>11/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -302,13 +311,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 2 - Configurando o Sistema Operacional de Rede</h5>
+                                    <h5>Elementos Diversos do HTML5</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>09/10/21</h5>
+                                    <h5>07/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -320,13 +329,86 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 1 - Explore a Rede</h5>
+                                    <h5>Introdução ao HTML</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>04/10/22</h5>
+                                    <h5>30/10/21</h5>
+                                </td>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Planejamento de um Web Site</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>28/10/21</h5>
+                                </td>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Composição de um Web Site</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>21/10/21</h5>
+                                </td>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Conceitos de Desenvolvimento e Web Sites</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>14/10/21</h5>
+                                </td>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Aula Inaugural</h5>
+                                </td>
+                                <td>
+                                    <h5>Síncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>08/10/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -343,18 +425,18 @@
                     </div>
                     <div class="next-tasks-container">
                         <div class="next-tasks-content">
-                            <h5>20 de Dezembro</h5>
-                            <h4>Exame dos Módulos 8-10</h4>
+                            <h5>15 de Janeiro</h5>
+                            <h4>Atividade Avaliatória 02</h4>
+                            <span class="task-type">Prova</span>
+                        </div>
+                        <div class="next-tasks-content">
+                            <h5>27 de Janeiro</h5>
+                            <h4>Atividade 17</h4>
                             <span class="task-type">Atividade</span>
                         </div>
                         <div class="next-tasks-content">
-                            <h5>17 de Janeiro</h5>
-                            <h4>Exame dos Módulos 14-15</h4>
-                            <span class="task-type">Atividade</span>
-                        </div>
-                        <div class="next-tasks-content">
-                            <h5>31 de Janeiro</h5>
-                            <h4>Exame Final de Redes</h4>
+                            <h5>06 de Fevereiro</h5>
+                            <h4>Projeto Final</h4>
                             <span class="task-type test">Prova</span>
                         </div>
                     </div>
@@ -363,7 +445,7 @@
                     </div>
                 </div>
                 <footer>
-                    <a href="https://github.com/GeovaniSS">
+                    <a href="https://github.com/GeovaniSS" target="_blank">
                         <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                     </a>
                 </footer>
