--- a/views/cursos.html
+++ b/views/cursos.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <footer>
-                <a href="https://github.com/GeovaniSS">
+                <a href="https://github.com/GeovaniSS" target="_blank">
                     <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                 </a>
             </footer>
