--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -350,15 +350,16 @@
                     </tbody>
                 </table>
             </div>
-            <!-- FOOTER -->
             <footer>
-                <a href="https://github.com/GeovaniSS">
+                <a href="https://github.com/GeovaniSS" target="_blank">
                     <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                 </a>
             </footer>
         </section>
 
+        <!--SECTION RIGHT-->
         <section id="right">
+            <!-- CALENDAR -->
             <div class="calendar">
                 <div class="calendar-month">
                     <span class="material-icons-sharp">navigate_before </span>
@@ -371,7 +372,8 @@
                 </div>
             </div>
 
-            <div class="aulas">
+            <!-- ONLINE CLASS -->
+            <div class="online-class">
                 <h3>Aulas síncronas</h3>
                 <h5></h5>
 
@@ -395,6 +397,7 @@
                     </div>
                     <h6 id="class-end">18:00</h6>
 
+                    <!-- MODAL ONLINE CLASS -->
                     <div class="class-active">
                         <h5>Redes de computadores</h5>
                         <div class="class-active-icons">
