--- a/views/ldp.html
+++ b/views/ldp.html
@@ -9,7 +9,20 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="../styles/nav-style.css">
     <link rel="stylesheet" href="../styles/menu-style.css">
-    <link rel="stylesheet" href="../styles/rdc-style.css">
+    <link rel="stylesheet" href="../styles/subjects-style.css">
+    <style>
+        body {
+            overflow-y: hidden;
+        }
+        
+        main aside {
+            height: 88vh;
+        }
+
+        footer {
+            margin-top: 0
+        }
+    </style>
 </head>
 <body>
     <!--NAVIGATION-->
@@ -140,13 +153,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 11 - Criação de uma rede pequena</h5>
+                                    <h5>Estrutura de Repetição em C</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>17/01/22</h5>
+                                    <h5>11/01/22</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -158,13 +171,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 10 - Camada de Aplicação</h5>
+                                    <h5>Estrutura Condicional em C</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>10/01/22</h5>
+                                    <h5>04/01/22</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -176,13 +189,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 9 - Camada de Transporte</h5>
+                                    <h5>Estrutura Sequencial em C</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>08/01/22</h5>
+                                    <h5>14/12/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp noattendance">cancel</span>
@@ -194,13 +207,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Estrutura de Repetição em Portugol</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>20/12/21</h5>
+                                    <h5>26/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp noattendance">cancel</span>
@@ -212,13 +225,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 7 - Endereçamento IP</h5>
+                                    <h5>Estrutura Condicional em Portugol</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/12/21</h5>
+                                    <h5>16/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp noattendance">cancel</span>
@@ -230,10 +243,10 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 6 - Camada de Rede</h5>
+                                    <h5>Estrutura Sequencial em Portugol</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
                                     <h5>29/11/22</h5>
@@ -244,98 +257,9 @@
                                 </td>
                             </tr>
                         </tbody>
-
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 5 - Protocolo Ethernet</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>13/11/21</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
-                                </td>
-                            </tr>
-                        </tbody>
-
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 4 - Camada de Acesso à Rede</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>25/10/21</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
-                                </td>
-                            </tr>
-                        </tbody>
-
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 3 - Comunicação e Protocolos de Rede</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>11/10/21</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
-                                </td>
-                            </tr>
-                        </tbody>
-
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 2 - Configurando o Sistema Operacional de Rede</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>09/10/21</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
-                                </td>
-                            </tr>
-                        </tbody>
-
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 1 - Explore a Rede</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>04/10/22</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
-                                </td>
-                            </tr>
-                        </tbody>
                     </table>
                 </div>
+                
                 <div class="next-tasks">
                     <div class="next-tasks-header">
                         <h3>Próximas <br> Atividades</h3>
@@ -343,18 +267,18 @@
                     </div>
                     <div class="next-tasks-container">
                         <div class="next-tasks-content">
-                            <h5>20 de Dezembro</h5>
-                            <h4>Exame dos Módulos 8-10</h4>
+                            <h5>07 de Janeiro</h5>
+                            <h4>Atividade 06 - Condicional</h4>
                             <span class="task-type">Atividade</span>
                         </div>
                         <div class="next-tasks-content">
-                            <h5>17 de Janeiro</h5>
-                            <h4>Exame dos Módulos 14-15</h4>
+                            <h5>14 de Janeiro</h5>
+                            <h4>Atividade 07 - Repetição</h4>
                             <span class="task-type">Atividade</span>
                         </div>
                         <div class="next-tasks-content">
-                            <h5>31 de Janeiro</h5>
-                            <h4>Exame Final de Redes</h4>
+                            <h5>25 de Janeiro</h5>
+                            <h4>Prova de LDP</h4>
                             <span class="task-type test">Prova</span>
                         </div>
                     </div>
@@ -363,7 +287,7 @@
                     </div>
                 </div>
                 <footer>
-                    <a href="https://github.com/GeovaniSS">
+                    <a href="https://github.com/GeovaniSS" target="_blank">
                         <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                     </a>
                 </footer>
