--- a/views/metodologia.html
+++ b/views/metodologia.html
@@ -9,7 +9,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="../styles/nav-style.css">
     <link rel="stylesheet" href="../styles/menu-style.css">
-    <link rel="stylesheet" href="../styles/rdc-style.css">
+    <link rel="stylesheet" href="../styles/subjects-style.css">
+    <style>
+        main aside {
+            height: 105vh;
+        }
+
+        footer {
+            margin-top: 2.9rem;
+        }
+    </style>
 </head>
 <body>
     <!--NAVIGATION-->
@@ -137,16 +146,17 @@
                                 <th>PRESENÇA</th>
                             </tr>
                         </thead>
+
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 11 - Criação de uma rede pequena</h5>
+                                    <h5>Orientações do Trabalho Final</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>17/01/22</h5>
+                                    <h5>14/01/22</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -158,31 +168,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 10 - Camada de Aplicação</h5>
+                                    <h5>Métodos e Procedimentos Metodológicos</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>10/01/22</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
-                                </td>
-                            </tr>
-                        </tbody>
-
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 9 - Camada de Transporte</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>08/01/22</h5>
+                                    <h5>17/12/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp noattendance">cancel</span>
@@ -194,13 +186,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Correção da Prova</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>20/12/21</h5>
+                                    <h5>10/12/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp noattendance">cancel</span>
@@ -212,13 +204,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 7 - Endereçamento IP</h5>
+                                    <h5>Referencial Teórico</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/12/21</h5>
+                                    <h5>26/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp noattendance">cancel</span>
@@ -230,13 +222,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 6 - Camada de Rede</h5>
+                                    <h5>Introdução do TCC</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>29/11/22</h5>
+                                    <h5>29/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -248,13 +240,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 5 - Protocolo Ethernet</h5>
+                                    <h5>Objetivos da Pesquisa</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>13/11/21</h5>
+                                    <h5>12/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -266,13 +258,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 4 - Camada de Acesso à Rede</h5>
+                                    <h5>Delimitando o tema do TCC</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>25/10/21</h5>
+                                    <h5>05/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -284,13 +276,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 3 - Comunicação e Protocolos de Rede</h5>
+                                    <h5>Currículo</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>11/10/21</h5>
+                                    <h5>29/10/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -302,13 +294,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 2 - Configurando o Sistema Operacional de Rede</h5>
+                                    <h5>Resenha Crítica</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>09/10/21</h5>
+                                    <h5>22/10/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -320,13 +312,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 1 - Explore a Rede</h5>
+                                    <h5>Aula Inaugural</h5>
                                 </td>
                                 <td>
-                                    <h5>Assíncrona</h5>
+                                    <h5>Síncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>04/10/22</h5>
+                                    <h5>08/10/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -343,18 +335,18 @@
                     </div>
                     <div class="next-tasks-container">
                         <div class="next-tasks-content">
-                            <h5>20 de Dezembro</h5>
-                            <h4>Exame dos Módulos 8-10</h4>
+                            <h5>18 de Dezembro</h5>
+                            <h4>Atividade do Sábado Letivo</h4>
                             <span class="task-type">Atividade</span>
                         </div>
                         <div class="next-tasks-content">
-                            <h5>17 de Janeiro</h5>
-                            <h4>Exame dos Módulos 14-15</h4>
+                            <h5>07 de Janeiro</h5>
+                            <h4>Atividade do TCC</h4>
                             <span class="task-type">Atividade</span>
                         </div>
                         <div class="next-tasks-content">
-                            <h5>31 de Janeiro</h5>
-                            <h4>Exame Final de Redes</h4>
+                            <h5>28 de Janeiro</h5>
+                            <h4>Trabalho Final</h4>
                             <span class="task-type test">Prova</span>
                         </div>
                     </div>
@@ -363,7 +355,7 @@
                     </div>
                 </div>
                 <footer>
-                    <a href="https://github.com/GeovaniSS">
+                    <a href="https://github.com/GeovaniSS" target="_blank">
                         <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                     </a>
                 </footer>
