--- a/views/rdc.html
+++ b/views/rdc.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="../styles/nav-style.css">
     <link rel="stylesheet" href="../styles/menu-style.css">
-    <link rel="stylesheet" href="../styles/rdc-style.css">
+    <link rel="stylesheet" href="../styles/subjects-style.css">
 </head>
 <body>
      <!--NAVIGATION-->
@@ -363,7 +363,7 @@
                     </div>
                 </div>
                 <footer>
-                    <a href="https://github.com/GeovaniSS">
+                    <a href="https://github.com/GeovaniSS" target="_blank">
                         <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                     </a>
                 </footer>
