--- a/views/externos.html
+++ b/views/externos.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <footer>
-                <a href="https://github.com/GeovaniSS">
+                <a href="https://github.com/GeovaniSS" target="_blank">
                     <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                 </a>
             </footer>
