--- a/views/iac.html
+++ b/views/iac.html
@@ -9,7 +9,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="../styles/nav-style.css">
     <link rel="stylesheet" href="../styles/menu-style.css">
-    <link rel="stylesheet" href="../styles/rdc-style.css">
+    <link rel="stylesheet" href="../styles/subjects-style.css">
+    <style>
+        main aside {
+            height: 100vh;
+        }
+
+        footer {
+            margin-top: 2.9rem;
+        }
+    </style>
 </head>
 <body>
     <!--NAVIGATION-->
@@ -140,13 +149,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 11 - Criação de uma rede pequena</h5>
+                                    <h5>Aula 09 - Máquina de Von Neumann</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>17/01/22</h5>
+                                    <h5>22/01/22</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -158,13 +167,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 10 - Camada de Aplicação</h5>
+                                    <h5>Aula 08 - Arquitetura de Memória</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>10/01/22</h5>
+                                    <h5>19/01/22</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -176,13 +185,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 9 - Camada de Transporte</h5>
+                                    <h5>Aula 07 - Aritmética Binária</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>08/01/22</h5>
+                                    <h5>05/01/22</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp noattendance">cancel</span>
@@ -194,31 +203,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Aula 06 - Sistemas de Numeração</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>20/12/21</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp noattendance">cancel</span>
-                                    <h5 class="icon-center">Falta</h5>
-                                </td>
-                            </tr>
-                        </tbody>
-    
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 7 - Endereçamento IP</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>06/12/21</h5>
+                                    <h5>22/12/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp noattendance">cancel</span>
@@ -230,13 +221,31 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 6 - Camada de Rede</h5>
+                                    <h5>Aula 05 - Unidades de Medida</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>29/11/22</h5>
+                                    <h5>30/11/21</h5>
+                                </td>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp noattendance">cancel</span>
+                                    <h5 class="icon-center">Falta</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+    
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Aula 04 - Hardware e Periféricos</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>10/11/22</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -248,13 +257,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 5 - Protocolo Ethernet</h5>
+                                    <h5>Aula 03 - Internet e Segurança</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>13/11/21</h5>
+                                    <h5>03/11/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -266,13 +275,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 4 - Camada de Acesso à Rede</h5>
+                                    <h5>Aula 02 - Software</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>25/10/21</h5>
+                                    <h5>20/10/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -284,49 +293,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 3 - Comunicação e Protocolos de Rede</h5>
+                                    <h5>Aula 01 - Conceitos básicos de Computação</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>11/10/21</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
-                                </td>
-                            </tr>
-                        </tbody>
-
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 2 - Configurando o Sistema Operacional de Rede</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>09/10/21</h5>
-                                </td>
-                                <td class="class-attendance">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
-                                </td>
-                            </tr>
-                        </tbody>
-
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <h5>Capítulo 1 - Explore a Rede</h5>
-                                </td>
-                                <td>
-                                    <h5>Assíncrona</h5>
-                                </td>
-                                <td>    
-                                    <h5>04/10/22</h5>
+                                    <h5>06/10/21</h5>
                                 </td>
                                 <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
@@ -343,18 +316,18 @@
                     </div>
                     <div class="next-tasks-container">
                         <div class="next-tasks-content">
-                            <h5>20 de Dezembro</h5>
-                            <h4>Exame dos Módulos 8-10</h4>
+                            <h5>12 de Janeiro</h5>
+                            <h4>Lista de Binários</h4>
                             <span class="task-type">Atividade</span>
                         </div>
                         <div class="next-tasks-content">
-                            <h5>17 de Janeiro</h5>
-                            <h4>Exame dos Módulos 14-15</h4>
+                            <h5>22 de Janeiro</h5>
+                            <h4>Lista de Von Neumann</h4>
                             <span class="task-type">Atividade</span>
                         </div>
                         <div class="next-tasks-content">
-                            <h5>31 de Janeiro</h5>
-                            <h4>Exame Final de Redes</h4>
+                            <h5>02 de Fevereiro</h5>
+                            <h4>Prova de Computação</h4>
                             <span class="task-type test">Prova</span>
                         </div>
                     </div>
@@ -363,7 +336,7 @@
                     </div>
                 </div>
                 <footer>
-                    <a href="https://github.com/GeovaniSS">
+                    <a href="https://github.com/GeovaniSS" target="_blank">
                         <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
                     </a>
                 </footer>
